<resources>
    <string name="app_name">calc</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>

    <string name="btnkey1">1</string>
    <string name="btnkey2">2</string>
    <string name="btnkey3">3</string>
    <string name="btnkey4">4</string>
    <string name="btnkey5">5</string>
    <string name="btnkey6">6</string>
    <string name="btnkey7">7</string>
    <string name="btnkey8">8</string>
    <string name="btnkey9">9</string>
    <string name="btnkey0">0</string>
    <string name="btnkey00">00</string>

    <string name="btnkeyplus">+</string>
    <string name="btnkeyminus">-</string>
    <string name="btnkeydivided">/</string>
    <string name="btnkeymultiplied">×</string>
    <string name="btnkeyequal">=</string>

    <string name="btnbracketsforward">(</string>
    <string name="btnbracketsback">)</string>

    <string name="btnbracketsin">sin</string>
    <string name="btnbracketcos">cos</string>
    <string name="btnbrackettan">tan</string>

    <string name="btnbracketsqrt">sqrt</string>
    <string name="btnbracketlog">log</string>
    <string name="btnbracketln">ln</string>
    <string name="btnbracketexp">exp</string>

    <string name="btnallclear">AC</string>
    <string name="btndel">DEL</string>

</resources>